<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    >

    <RelativeLayout
        android:id="@+id/textDataContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/listDataLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blocks_with_shadow"
            android:padding="@dimen/block_padding"
            >

            <TextView
                android:id="@+id/tripDataLayoutLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/block_label_start_margin"
                android:text="@string/trip_data_layout_label"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/label_text_size"
                />

            <TextView
                android:id="@+id/tripDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tripDataLayoutLabel"
                android:layout_marginStart="@dimen/block_item_start_margin"
                android:text="@string/trip_date_label"
                />

            <TextView
                android:id="@+id/tripDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tripDateLabel"
                android:layout_alignParentEnd="true"
                />


            <TextView
                android:id="@+id/tripDistanceTravelledLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tripDateLabel"
                android:layout_marginStart="@dimen/block_item_start_margin"
                android:layout_marginTop="@dimen/block_item_top_margin"
                android:text="@string/distance_travelled_hint"
                />

            <TextView
                android:id="@+id/tripDistanceTravelled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tripDistanceTravelledLabel"
                android:layout_alignParentEnd="true"
                />

            <TextView
                android:id="@+id/tripIdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tripDistanceTravelledLabel"
                android:layout_marginStart="@dimen/block_item_start_margin"
                android:layout_marginTop="@dimen/block_item_top_margin"
                android:paddingBottom="@dimen/block_bottom_padding"
                android:text="@string/trip_ID_hint"
                />

            <TextView
                android:id="@+id/tripId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/tripIdLabel"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/listSpeedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listDataLayout"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/blocks_with_shadow"
            android:padding="@dimen/block_padding"
            >

            <TextView
                android:id="@+id/speedLayoutLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/block_label_start_margin"
                android:text="@string/speed_layout_label"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/label_text_size"
                />

            <TextView
                android:id="@+id/maxSpeedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/speedLayoutLabel"
                android:layout_marginStart="@dimen/block_item_start_margin"
                android:text="@string/maximum_speed_hint"
                />

            <TextView
                android:id="@+id/tripMaxSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/maxSpeedLabel"
                android:layout_alignParentEnd="true"
                />

            <TextView
                android:id="@+id/tripAvgSpeedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/maxSpeedLabel"
                android:layout_marginStart="@dimen/block_item_start_margin"
                android:layout_marginTop="@dimen/block_item_top_margin"
                android:paddingBottom="@dimen/block_bottom_padding"
                android:text="@string/average_speed_hint"
                />

            <TextView
                android:id="@+id/tripAvgSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/tripAvgSpeedLabel"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tripFuelSpentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listSpeedLayout"
            android:layout_marginBottom="10dp"
            android:background="@drawable/blocks_with_shadow"
            android:padding="@dimen/block_padding"
            >

            <TextView
                android:id="@+id/fuelSpentLayoutLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/block_label_start_margin"
                android:text="@string/fuel_spent_layout_label"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/label_text_size"
                />

            <TextView
                android:id="@+id/tripAvgFuelConsumptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fuelSpentLayoutLabel"
                android:layout_marginStart="@dimen/block_item_start_margin"
                android:text="@string/average_fuel_consumption_hint"
                />

            <TextView
                android:id="@+id/tripAvgFuelConsumption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tripAvgFuelConsumptionLabel"
                android:layout_alignParentEnd="true"
                />

            <TextView
                android:id="@+id/fuelSpentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tripAvgFuelConsumptionLabel"
                android:layout_marginStart="@dimen/block_item_start_margin"
                android:layout_marginTop="@dimen/block_item_top_margin"
                android:text="@string/fuel_spent_hint"
                />

            <TextView
                android:id="@+id/tripFuelSpent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/fuelSpentLabel"
                android:layout_alignParentEnd="true"
                />

            <TextView
                android:id="@+id/moneyOnTripFuelSpentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fuelSpentLabel"
                android:layout_marginStart="@dimen/block_item_start_margin"
                android:layout_marginTop="@dimen/block_item_top_margin"
                android:paddingBottom="@dimen/block_bottom_padding"
                android:text="@string/money_on_fuel_spent_hint"
                />

            <TextView
                android:id="@+id/tripMoneyOnTripFuelSpent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/moneyOnTripFuelSpentLabel"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tripTimeSpentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tripFuelSpentLayout"
            android:layout_marginBottom="10dp"
            android:background="@drawable/blocks_with_shadow"
            android:padding="@dimen/block_padding"
            >

            <TextView
                android:id="@+id/timeSpentLayoutLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/block_label_start_margin"
                android:text="@string/time_spent_layout_label"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/label_text_size"
                />

            <TextView
                android:id="@+id/timeSpentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/timeSpentLayoutLabel"
                android:layout_marginStart="@dimen/block_item_start_margin"
                android:text="@string/time_spent_on_trip_hint"
                />

            <TextView
                android:id="@+id/tripTimeSpent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/timeSpentLabel"
                android:layout_alignParentEnd="true"
                />


            <TextView
                android:id="@+id/timeSpentInMotionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/timeSpentLabel"
                android:layout_marginStart="@dimen/block_item_start_margin"
                android:layout_marginTop="@dimen/block_item_top_margin"
                android:text="@string/time_spent_in_motion_hint"
                />

            <TextView
                android:id="@+id/tripTimeSpentInMotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/timeSpentInMotionLabel"
                android:layout_alignParentEnd="true"
                />


            <TextView
                android:id="@+id/timeSpentOnStopLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/timeSpentInMotionLabel"
                android:layout_marginStart="@dimen/block_item_start_margin"
                android:layout_marginTop="@dimen/block_item_top_margin"
                android:paddingBottom="@dimen/block_bottom_padding"
                android:text="@string/time_spent_on_stop_hint"
                />

            <TextView
                android:id="@+id/tripTimeSpentOnStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/timeSpentOnStopLabel"
                />

        </RelativeLayout>
    </RelativeLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
      />

    <ImageButton
        android:id="@+id/mapTurnActiveButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/map_icon"/>
</RelativeLayout>


